<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Michael Abbott\'s Hexagonal Game</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="action_settings">Settings</string>
    
    <string name="action_login">Log in</string>
    <string name="action_posts">Posts</string>
    <string name="action_board">Tile Board</string>
    
    <!-- <string name="action_experiment">Experiment</string> -->
    
    <string name="action_experiment_developer">Experiment Developer</string>
    <string name="action_experiment_player">Experiment Player</string>

</resources>
