<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.MichaelFAbbott.myfirstapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"/>
    <item
        android:id="@+id/action_posts"
        android:title="@string/action_posts"/>
    <item
        android:id="@+id/action_board"
        android:title="@string/action_board"/>
    
    
    <!-- <item
        android:id="@+id/action_experiment"
        android:title="@string/action_experiment"/> -->
    <item
        android:id="@+id/action_experiment_developer"
        android:title="@string/action_experiment_developer"/>
    <item
        android:id="@+id/action_experiment_player"
        android:title="@string/action_experiment_player"/>
    
    

</menu>
